--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-</head>
-<body></body>
-
+  <head>
+    <meta charset="utf-8" />
+    <title>Excursion</title>
+    <link rel="stylesheet" href="resources/css/style.css" />
+  </head>
+  <body>
+    <h1><h1>Discover hidden places in the world around you</h1>
+<p><a href="#">Download Excursion (Coming soon!)</a></p></header>
+    <p>
+        <video src="./resources/excursion.mp4" autoplay>Your browser does not support HTML5 video.</video>
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like and recommends new points of interest around you.</p>
+        <p><img src="./resources/camp.webp"></p>
+        <p><img class="phone-ic" src="resources/phone.webp"></p>
+        <h2>Coming Soon for iPhone and Android</h2>
+        <a href="#">Download Excursion (Coming soon!)</a></p>
+    </main>
+    <footer>
+        <p>&#169 Excursion</p>
+    </footer>
+  </body>
 </html>
